Agregué login.fxml y register.fxml, además los controladores correspondientes loginController.Java y RegisterController.Java. No corre al 100%